--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,14 @@
+/* roboto-regular - latin */
 @import "reset.css";
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/roboto-v30-latin-regular.eot');
+  /* IE9 Compat Modes */
+  src: local(''), url('../fonts/roboto-v30-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('../fonts/roboto-v30-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */ url('../fonts/roboto-v30-latin-regular.woff') format('woff'), /* Modern Browsers */ url('../fonts/roboto-v30-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */ url('../fonts/roboto-v30-latin-regular.svg#Roboto') format('svg');
+  /* Legacy iOS */
+}
 html {
   box-sizing: border-box;
 }
@@ -8,6 +18,7 @@ html {
   box-sizing: inherit;
 }
 a {
+  font-family: 'Roboto';
   text-decoration: none;
   color: #000;
 }
@@ -60,7 +71,7 @@ a {
   content: '';
   width: 100%;
   height: 2px;
-  background-color: #fff;
+  background-color: #EEEEEE;
   position: absolute;
   left: 0;
   bottom: 15px;
@@ -75,7 +86,7 @@ a {
   content: '';
   width: 100%;
   height: 2px;
-  background-color: #fff;
+  background-color: #222831;
   position: absolute;
   left: 0;
   bottom: -2px;
@@ -130,6 +141,9 @@ body .inverted .header__container {
   z-index: 8;
   color: white;
   letter-spacing: 3px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
 }
 .header .header__container .menu__body .menu__list li {
   position: relative;
@@ -160,7 +174,7 @@ body .inverted .header__container {
   height: 0;
   border-style: solid;
   border-width: 0 4.5px 5px 4.5px;
-  border-color: transparent transparent #393E46 transparent;
+  border-color: transparent transparent #EEEEEE transparent;
   position: absolute;
   top: -5px;
   left: 34px;
@@ -171,6 +185,10 @@ body .inverted .header__container {
 .header .header__container .menu__body .menu__list li .menu__sub-list li .menu__sub-link {
   color: #222831;
   padding-bottom: 10px;
+  font-weight: 600;
+  font-family: 'Roboto';
+  font-size: 18px;
+  line-height: 100%;
 }
 .header .header__container .menu__body .menu__list li .menu__sub-list li:last-child {
   margin: 0px 0px 0px 0px;
