--- a/style/main.less
+++ b/style/main.less
@@ -1,4 +1,16 @@
-
+/* roboto-regular - latin */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/roboto-v30-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../fonts/roboto-v30-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/roboto-v30-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/roboto-v30-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/roboto-v30-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/roboto-v30-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+  }
 
 @import "reset.css";
 
@@ -16,6 +28,7 @@ html{
 }
 
 a{
+    font-family: 'Roboto';
     text-decoration: none;
     color: #000;
 }
@@ -87,7 +100,7 @@ a{
     content: '';
     width: 100%;
     height: 2px;
-    background-color: #fff;
+    background-color: @4;
     position: absolute;
     left: 0;
     bottom: 15px;
@@ -103,7 +116,7 @@ a{
     content: '';
     width: 100%;
     height: 2px;
-    background-color: #fff;
+    background-color: @1;
     position: absolute;
     left: 0;
     bottom: -2px;
@@ -178,6 +191,10 @@ body .inverted {
                 z-index: 8;
                 color: white;
                 letter-spacing: 3px;
+                font-family: 'Roboto';
+                font-style: normal;
+                font-weight: 400;
+                
             }
             
             
@@ -207,7 +224,7 @@ body .inverted {
                             height: 0;
                             border-style: solid;
                             border-width: 0 4.5px 5px 4.5px;
-                            border-color: transparent transparent @2 transparent;
+                            border-color: transparent transparent @4 transparent;
                             position: absolute;
                             top: -5px;
                             left: 34px;
@@ -227,10 +244,15 @@ body .inverted {
                         display: flex;
                         flex-direction: column;
                         li{
+                            
                             margin: 0px 0px 24px 0px;
                             .menu__sub-link{
                                 color: @1;
                                 padding-bottom: 10px;
+                                font-weight: 600;
+                                font-family: 'Roboto';
+                                font-size: 18px;
+                                line-height: 100%;
                                 }
                         }
                         li:last-child{
