--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,3 @@
-/* roboto-regular - latin */
 @import "reset.css";
 @font-face {
   font-family: 'Roboto';
@@ -26,46 +25,9 @@ a {
   width: 1140px;
   margin: 0 auto;
 }
-.one {
-  margin-top: 95px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #cacaca;
-  height: 250px;
-  background: #222831;
-  color: white;
-  clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
-}
-.two {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #cacaca;
-  height: 250px;
-  background: #393E46;
-  color: white;
-  clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
-}
-.three {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #cacaca;
-  height: 250px;
-  background: #00ADB5;
-  color: white;
-  clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
-}
-.four {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #cacaca;
-  height: 250px;
-  background: #EEEEEE;
-  color: white;
-  clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
+.svg_icons_css img {
+  height: 32px;
+  width: 32px;
 }
 .menu__link::after {
   content: '';
@@ -292,6 +254,19 @@ footer .footer__container .nav_col .nav__section__two {
 footer .footer__container .Subscribe__col {
   width: 33.33333%;
 }
+footer .footer__container .Subscribe__col .subscribe__section {
+  margin-top: 25px;
+}
+footer .footer__container .Subscribe__col .subscribe__section .follow_us_container {
+  margin-top: 60px;
+}
+footer .footer__container .Subscribe__col .subscribe__button {
+  display: flex;
+  margin-bottom: 20px;
+}
+footer .footer__container .Subscribe__col .social_icons_footer a {
+  padding-right: 17px;
+}
 footer .copyright__section {
   padding-top: 50px;
   padding-bottom: 50px;
@@ -300,17 +275,6 @@ footer .copyright__section {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-footer .slide_box .slide_box_div {
-  width: 796px;
-  z-index: 3;
-  transform: translate3d(calc(0px), calc(0px), calc(0px)) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1);
-  opacity: 1;
-  transition-duration: 0ms;
-  border-radius: 0.75rem;
-  border: 0 solid;
-  border-color: blue;
-  content: "";
 }
 @media only screen and (min-width: 1px) {
   .menu__list {
