--- a/style/main.less
+++ b/style/main.less
@@ -1,4 +1,8 @@
-/* roboto-regular - latin */
+
+
+
+
+
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
@@ -11,6 +15,17 @@
          url('../fonts/roboto-v30-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../fonts/roboto-v30-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
   }
+
+ 
+  
+  
+
+  
+  
+
+
+
+
 
 @import "reset.css";
 
@@ -35,6 +50,7 @@ a{
 
 
 .wrapper{
+    
     width: 1140px;
     margin: 0 auto;
 }
@@ -45,55 +61,18 @@ a{
 
 
 
+.svg_icons_css{
+    img{
+        height: 32px;
+        width: 32px;
+    }
+    
+}
 
 
 
 
 
-
-
- .one{
-    margin-top: 95px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #cacaca;
-    height: 250px;
-    background: @1;
-    color: white;
-    clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
-  }
-  .two{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #cacaca;
-    height: 250px;
-    background: @2;
-    color: white;
-    clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
-  }
-
-  .three{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #cacaca;
-    height: 250px;
-    background: @3;
-    color: white;
-    clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
-  }
-  .four{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #cacaca;
-    height: 250px;
-    background: @4;
-    color: white;
-    clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
-  }
 
 ////////////////////////////////////////transform: scaleX(1);//////////////////////////////////////
   .menu__link::after{
@@ -372,7 +351,35 @@ footer{
             }
         }
         .Subscribe__col{
+           
             width: 33.33333%;
+
+
+            .subscribe__section{
+                margin-top: 25px;
+
+                .follow_us_container{
+                    margin-top: 60px;
+                }
+            }
+            .subscribe__button{
+                display: flex;
+                margin-bottom: 20px;
+            }
+            .social_icons_footer{
+                a{
+                    padding-right: 17px;
+                }
+                
+
+
+            }
+
+
+
+
+
+
         }
     }
     .copyright__section{
@@ -386,19 +393,7 @@ footer{
 
     }
 
-.slide_box{
-    .slide_box_div{
-        width: 796px;
-        z-index: 3;
-        transform: translate3d(calc(0px), calc(0px), calc(0px)) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1);
-        opacity: 1;
-        transition-duration: 0ms;
-        border-radius: 0.75rem;
-        border: 0 solid;
-        border-color: blue;
-        content: "";
-    }
-}
+
 ///////////////////parallax section//////////////////////////////
  
 
