--- a/style/main.css
+++ b/style/main.css
@@ -16,11 +16,6 @@
 }
 :root {
   --accent: #CC8869;
-  --text: #333;
-  --regular-text: 16px;
-  --lineheight: 1.65;
-  --userfont: roboto-st, sans-serif;
-  --systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
   --padding: 120px;
   --transition: cubic-bezier(0.4, 0, 0, 1);
 }
@@ -601,7 +596,6 @@ body {
   background-color: black;
   color: white;
   position: relative;
-  height: 800px;
   overflow: hidden;
 }
 .swiper-slider::before {
@@ -625,7 +619,7 @@ body {
   background-size: cover;
   animation: key-light 3s ease-in-out infinite;
 }
-.swiper-slider h2 {
+.swiper-slider .swiper-slider__header {
   position: absolute;
   text-align: center;
   width: 100%;
@@ -635,7 +629,7 @@ body {
   font-size: 32px;
   color: rgba(255, 255, 255, 0.7);
 }
-.swiper-slider h2 span {
+.swiper-slider .swiper-slider__header span {
   color: var(--accent);
 }
 .swiper-slider .swiper-slider__wrapper {
@@ -657,33 +651,122 @@ body {
   background-size: cover;
   animation: key-glow 1.7s ease-in-out infinite;
 }
-.swiper-slider .swiper-slider__wrapper .swiper-carousel {
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-carousel .swiper-wrapper {
+  transition: var(--transition);
   width: 100%;
   height: 100%;
 }
-.swiper-slider .swiper-slider__wrapper .swiper-carousel .swiper-wrapper .swiper-slide-active {
-  opacity: 1;
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-carousel .swiper-wrapper .swiper-carousel__item {
+  position: relative;
+  height: calc(100vh - var(--padding)*2);
+  text-align: center;
+  opacity: 0.25;
+  transform: scale(0.75);
+  transition: opacity 1.8s var(--transition), transform 1.8s var(--transition);
 }
-.swiper-slider .swiper-slider__wrapper .swiper-carousel .swiper-carousel__image-wrapper {
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-carousel .swiper-wrapper .swiper-carousel__item::after {
+  content: '';
   position: absolute;
-  width: 100%;
-  height: 100%;
-  perspective: 150px;
-  transform-style: preserve-3d;
+  height: 0px;
+  width: 120px;
+  box-shadow: 0 0 50px 10px #08e9ed;
+  bottom: -35px;
+  left: calc(50% - 60px);
 }
-.swiper-slider .swiper-slider__wrapper .swiper-carousel .swiper-carousel__image-wrapper .swiper-carousel__image {
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-carousel .swiper-wrapper .swiper-slide-active {
+  opacity: 0.8;
+  transform: scale(0.99);
+}
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-carousel .swiper-wrapper .swiper-slide .swiper-carousel__image-wrapper .swiper-carousel__image {
   position: absolute;
   width: 100%;
   height: 100%;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+  animation: key-left-image 2s ease-in-out infinite;
+  animation: key-right-image 2s ease-in-out infinite;
+  animation-direction: alternate;
 }
-.swiper-slider .swiper-slider__wrapper .swiper-carousel .swiper-carousel__item {
-  position: relative;
-  height: calc(100vh - var(--padding)*2);
-  text-align: center;
-  opacity: 0.25;
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-carousel .swiper-wrapper .swiper-slide .swiper-carousel__image-wrapper .swiper-carousel__image-left {
+  perspective-origin: left center;
+  clip-path: polygon(0 0, 50% 0, 50% 100%, 0 100%);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  perspective: 150px;
+  transform-style: preserve-3d;
+}
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-carousel .swiper-wrapper .swiper-slide .swiper-carousel__image-wrapper .swiper-carousel__image-right {
+  perspective-origin: right center;
+  clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  perspective: 150px;
+  transform-style: preserve-3d;
+  margin-left: -0.55px;
+}
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-carousel .swiper-wrapper .swiper-slide p {
+  position: absolute;
+  bottom: -55px;
+  width: 100%;
+  font-family: assassin-st, sans-serif;
+  font-size: 32px;
+  color: rgba(255, 255, 255, 0.5);
+  text-shadow: #3a4e5e 0 0 10px;
+}
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-slider__navigation {
+  overflow: hidden;
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-slider__navigation .swiper-slider__navigation-next {
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  outline: none;
+  right: 0;
+  cursor: pointer;
+}
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-slider__navigation .swiper-slider__navigation-next::before {
+  content: '?';
+  font-family: assassin-st;
+  opacity: 0;
+  transition: opacity 0.75s ease-out;
+  position: absolute;
+  transform: rotate(90deg);
+  right: 50px;
+  top: 50%;
+  font-size: 45px;
+}
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-slider__navigation .swiper-slider__navigation-next:hover::before {
+  opacity: 0.3;
+}
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-slider__navigation .swiper-slider__navigation-prev {
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  outline: none;
+  cursor: pointer;
+}
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-slider__navigation .swiper-slider__navigation-prev::before {
+  content: '?';
+  font-family: assassin-st;
+  opacity: 0;
+  transition: opacity 0.75s ease-out;
+  position: absolute;
+  transform: rotate(-90deg);
+  left: 50px;
+  top: 50%;
+  font-size: 45px;
+}
+.swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-slider__navigation .swiper-slider__navigation-prev:hover::before {
+  opacity: 0.3;
 }
 .swiper-slider video {
   position: absolute;
@@ -714,6 +797,22 @@ body {
   }
   100% {
     opacity: 0.6;
+  }
+}
+@keyframes key-left-image {
+  0% {
+    transform: rotateY(-1deg) scaleX(0.92);
+  }
+  100% {
+    transform: rotateY(0deg) scaleX(1);
+  }
+}
+@keyframes key-right-image {
+  0% {
+    transform: rotateY(0deg) scaleX(1);
+  }
+  100% {
+    transform: rotateY(1deg) scaleX(0.92);
   }
 }
 .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li.element-show {
