--- a/style/main.less
+++ b/style/main.less
@@ -14,11 +14,6 @@
 
   :root {
 	--accent: #CC8869;
-	--text: #333;
-	--regular-text: 16px;
-	--lineheight: 1.65;
-	--userfont: roboto-st, sans-serif;
-	--systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
 	--padding: 120px;
 	--transition: cubic-bezier(.4, 0, 0, 1);
 }
@@ -668,7 +663,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
         opacity: 0;
         transform: translate3d(0,0,0);
         -webkit-clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-      clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+        clip-path: polygon(0 0, 0 0, 0 0, 0 0);
   
     }
   }
@@ -789,12 +784,14 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 
 //////////////////////////////////////3d slider with swiper slider///////////////////////////////////////////////////////
 
+        
+    
+//////////////////////////////////////////////////////////////////////////////////////////////////////
 .swiper-slider{
     margin: 25px 0px 25px 0px;
     background-color: black;
     color: white;
     position: relative;
-    height: 800px;
     overflow: hidden;
     &::before{
         content: '';
@@ -817,8 +814,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
         background-size: cover;
         animation: key-light 3s ease-in-out infinite;
     }
-
-    h2{
+    .swiper-slider__header{
         position: absolute;
         text-align: center;
         width: 100%;
@@ -849,41 +845,148 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
             background-size: cover;
             animation: key-glow 1.7s ease-in-out infinite;
         }
-        .swiper-carousel{
-            .swiper-wrapper{
-                .swiper-slide-active {
-                    opacity: 1;
-                }
-            }
-            width: 100%;
-            height: 100%;
-            .swiper-carousel__image-wrapper{
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                perspective: 150px;
-                transform-style: preserve-3d;
-                .swiper-carousel__image{
-                    position: absolute;
-                    width: 100%;
+        .swiper-slider__container{
+            .swiper-carousel{
+                .swiper-wrapper{
+                    transition: var(--transition);
+                    .swiper-carousel__item{
+                        position: relative;
+                        height: calc(100vh - var(--padding)*2);
+                        text-align: center;
+                        opacity: 0.25;
+                        transform: scale(.75);
+                        transition: opacity 1.8s var(--transition), transform 1.8s var(--transition);
+                        &::after{
+                            content: '';
+                            position: absolute;
+                            height: 0px;
+                            width: 120px;
+                            box-shadow: 0 0 50px 10px #08e9ed;
+                            bottom: -35px;
+                            left: calc(50% - 60px);
+                        }
+                    }
+                    width: 100%; //or swiper-carousel
                     height: 100%;
-                    background-size: contain;
-                    background-position: center;
-                    background-repeat: no-repeat;
+                    .swiper-slide-active {
+                        opacity: .8;
+                        transform: scale(.99);
+                    }
+                    .swiper-slide{
+                        .swiper-carousel__image-wrapper{
+                            .swiper-carousel__image{
+                                position: absolute;
+                                width: 100%;
+                                height: 100%;
+                                background-size: contain;
+                                background-position: center;
+                                background-repeat: no-repeat;
+
+                                animation: key-left-image 2s ease-in-out infinite;
+                                animation: key-right-image 2s ease-in-out infinite;
+                                animation-direction: alternate;
+
+
+                            }
+                            .swiper-carousel__image-left{
+                                perspective-origin: left center;
+	                            clip-path: polygon(0 0, 50% 0, 50% 100%, 0 100%);
+                                position: absolute;
+                                width: 100%;
+                                height: 100%;
+                                perspective: 150px;
+                                transform-style: preserve-3d;
+                                
+                            }
+                            .swiper-carousel__image-right{
+                                perspective-origin: right center;
+	                            clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
+                                position: absolute;
+                                width: 100%;
+                                height: 100%;
+                                perspective: 150px;
+                                transform-style: preserve-3d;
+                                margin-left: -.55px
+                                
+                            }
+                        }
+                        p{
+                            position: absolute;
+                            bottom: -55px;
+                            width: 100%;
+                            font-family: assassin-st, sans-serif;
+                            font-size: 32px;
+                            color: rgba(255, 255, 255, .5);
+                            text-shadow: rgb(58 78 94) 0 0 10px;     
+                        }
+                    }
                 }
-
-
             }
-            .swiper-carousel__item{
-                position: relative;
-                height: calc(100vh - var(--padding)*2);
-                text-align: center;
-                opacity: 0.25;
-                
-                
+        
+        
+            .swiper-slider__navigation{
+                overflow: hidden;
+                position: absolute;
+                z-index: 2;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                .swiper-slider__navigation-next{
+                    position: absolute;
+                    height: 100%;
+                    width: 50%;
+                    outline: none;
+                    right: 0;
+                    cursor: pointer;
+                    &::before{
+                        content: '?';
+                        font-family: assassin-st;
+                        opacity: 0;
+                        transition: opacity .75s ease-out;
+                        position: absolute;
+                        transform: rotate(90deg);
+                        right: 50px;
+                        top: 50%;
+                        font-size: 45px;
+                        }
+                    &:hover{
+                        &::before{
+                            opacity: .3;
+                        }
+                    }
+                    
+        
+                }
+                .swiper-slider__navigation-prev{
+                    position: absolute;
+                    height: 100%;
+                    width: 50%;
+                    outline: none;
+                    cursor: pointer;
+                    &::before{
+                        content: '?';
+                        font-family: assassin-st;
+                        opacity: 0;
+                        transition: opacity .75s ease-out;
+                        position: absolute;
+                        transform: rotate(-90deg);
+                        left: 50px;
+                        top: 50%;
+                        font-size: 45px;
+                    }
+                    &:hover{
+                        &::before{
+                            opacity: .3;
+                        }
+                    }
+                    
+                }
             }
+        
         }
     }
+    
     video{
         position: absolute;
         top: 0;
@@ -892,9 +995,13 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
         height: 100%;
         object-fit: cover;
         opacity: .5;
-
     }
 }
+
+//////////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+
 
 @keyframes key-light{
     0%{
@@ -920,6 +1027,24 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
     }
 }
 
+@keyframes key-left-image{
+    0%{
+       transform: rotateY(-1deg) scaleX(.92);
+    }
+   
+    100%{
+        transform: rotateY(0deg) scaleX(1);
+    }
+}
+@keyframes key-right-image{
+    0%{
+        transform: rotateY(0deg) scaleX(1);
+     }
+    
+     100%{
+         transform: rotateY(1deg) scaleX(.92);
+     }
+}
 
 
 
@@ -2051,14 +2176,5 @@ body .footer__container .paragraph__section{
 
 
 
-
-
-            
-        
-    
-
-
-
-    
 
 
